# vision-competition-template

./: .gitmodules  Dockerfile  docker-compose.yml  project.toml  pyproject.toml
.circleci/: config.yml
